para_se_basear/Trab_Anna/CodeGeneration/Tests/Error/10.AMZ
#import "SYS_OUT";
import "ERRO"; // Missing #

// Missing ()
void main {
	
	int a = 20;
	for (int i = 0; i < a; i = i+1) {
		print(i);
	}

	erro;

}

void erro() {
	// Missing ;
	print ("Error message")
}